--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,10 @@
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-install-cmd": [
+            "php artisan swagger-lume:publish",
+            "php artisan swagger-lume:generate"
         ]
     },
     "config": {
