--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-install-cmd": [
-            "php artisan swagger-lume:publish",
-            "php artisan swagger-lume:generate"
+            "php artisan migrate",
         ]
     },
     "config": {
