--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-install-cmd": [
-            "php artisan migrate",
+            "php artisan migrate"
         ]
     },
     "config": {
